--- a/StartPage.html
+++ b/StartPage.html
@@ -1,49 +1,32 @@
-<!DOCTYPE html> 
+<!--this is the HTML for the start page, it allows users to select "play game" or "instructions"-->
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Paintball Combat</title>
+	<link rel="stylesheet" type="text/css" href="StartPage.css">
+</head>
+<body>
 
-<html> 
+	<section id="body">
+		<h1>Paintball Combat</h1>
 
-<head> 
+		<!--rolling text animation -->
+		<div class="word">
+			<span> Welcome to Paintball Combat</span>
+			<span> Move in the direction of your mouse</span>
+			<span> Click to shoot</span>
+			<span> </span>
+		</div>
+	
+		<input type="text" placeholder="NICKNAME">
+		
+		<button id="button1">Play Game</button>
 
-<title>Paintball Combat</title> 
+		<img src="Web Programming/images/orange.jpg">
 
-<link rel="stylesheet" type="text/css" href="StartPage.css"> 
+		<button id="button2">Change Colour</button>
 
-</head> 
-
-<body> 
-
- 
-
-<section id="body"> 
-
-<h1>Paintball Combat</h1> 
-
- 
-
-<p> 
-
-text 
-
-</p> 
-
- 
-
-<button id="btn1">Play Game</button> 
-
- 
-
-<img src="Web Programming/images/orange.jpg"> 
-
- 
-
-<button id="btn2">Change Colour</button> 
-
- 
-
-</section> 
-
-<script type="text/javascript" src="StartPage.js"></script> 
-
-</body> 
-
-</html> 
+	</section>
+	<script type="text/javascript" src="StartPage.js"></script>
+</body>
+</html>
