--- a/StartPage.html
+++ b/StartPage.html
@@ -13,7 +13,7 @@
 		<!--rolling text animation -->
 		<div class="word">
 			<span> Welcome to Paintball Combat</span>
-			<span> Move in the direction of your mouse</span>
+			<span> Use the arrow keys to move</span>
 			<span> Click to shoot</span>
 			<span> </span>
 		</div>
@@ -25,6 +25,8 @@
 		<img src="Web Programming/images/orange.jpg">
 
 		<button id="button2">Change Colour</button>
+
+		<button id="button3">Instructions Page</button>
 
 	</section>
 	<script type="text/javascript" src="StartPage.js"></script>
