--- a/moveCircleFunction.html
+++ b/moveCircleFunction.html
@@ -67,6 +67,26 @@
                     x += dx;
                 }
                 break;
+                case 87:
+                if(y - dy > 0){
+                    y -= dy;
+                }
+                break;
+                case 83:
+                if(y + dy < HEIGHT){
+                    y += dy;
+                }
+                break;
+                case 65:
+                if(x - dx > 0){
+                    x -= dx;
+                }
+                break;
+                case 68:
+                if(x + dx < WIDTH){
+                    x += dx;
+                }
+                break;
             }
         }
 
