--- a/StartPage.html
+++ b/StartPage.html
@@ -20,13 +20,13 @@
 	
 		<input type="text" placeholder="NICKNAME">
 		
-		<button id="button1">Play Game</button>
+		<button id="button1" onclick="window.location.href='canvas.html';">Play Game</button>
 
 		<img src="Web Programming/images/orange.jpg">
 
 		<button id="button2">Change Colour</button>
 
-		<button id="button3">Instructions Page</button>
+		<button id="button3" onclick="window.location.href='Instructions.html';">Instructions</button>
 
 	</section>
 	<script type="text/javascript" src="StartPage.js"></script>
