--- a/StartPage.html
+++ b/StartPage.html
@@ -13,7 +13,7 @@
 		<!--rolling text animation -->
 		<div class="word">
 			<span> Welcome to Paintball Combat</span>
-			<span> Use the arrow keys to move</span>
+			<span> Use the Arrow Keys to move</span>
 			<span> Click to shoot</span>
 			<span> </span>
 		</div>
