--- a/StartPage.html
+++ b/StartPage.html
@@ -14,13 +14,13 @@
 		<div class="word">
 			<span> Welcome to Paintball Combat</span>
 			<span> Use the Arrow Keys to move</span>
-			<span> Click to shoot</span>
+			<span> Click to Shoot</span>
 			<span> </span>
 		</div>
 	
 		<input type="text" placeholder="NICKNAME">
 		
-		<button id="button1" onclick="window.location.href='canvas.html';">Play Game</button>
+		<button id="button1" onclick="window.location.href='canvas.html';">Game Screen</button>
 
 		<img src="Web Programming/images/orange.jpg">
 
