linking style sheet

--- a/Instructions.html
+++ b/Instructions.html
@@ -1,21 +1,13 @@
-<<<<<<< HEAD
+
 <!--this is the HTML for the Instructions page-->
 <!DOCTYPE html>
+
 <html>
      <head>
-           <title>
-               Instructions
-           </title>
+        <title>Instructions</title>
+        <link rel="stylesheet" type="text/css" href="Instructions.css">
     </head> 
  <body>
 
 </body>
-=======
-<html>
-    <body>
-        <head>
-            d
-        </head>
-    </body>
->>>>>>> 47a3370e97117206e523e3a8c8e660f0d7dadcf2
 </html>
