Addition of start page button

--- a/Instructions.html
+++ b/Instructions.html
@@ -31,6 +31,10 @@
         <div class = "Instruction5">
             5. Some text explaining the instructions we still have to decide
         </div>
+
+        <div class="Back">
+            <button id="BackButton" onclick="window.location.href='StartPage.html';">Back to Start Page</button>
+        </div>
         
 </body>
 </html>
