Making title responsive and buttons the same size

--- a/StartPage.html
+++ b/StartPage.html
@@ -8,8 +8,9 @@
 <body>
 
 	<section id="body">
+		<div class="Heading">
 		<h1>Paintball Combat</h1>
-
+</div>
 		<!--rolling text animation -->
 		<div class="word">
 			<span> Welcome to Paintball Combat</span>
