--- a/StartPage.html
+++ b/StartPage.html
@@ -22,7 +22,7 @@
 		
 		<button id="button1" onclick="window.location.href='canvas.html';">Play Game</button>
 
-		<img src="Web Programming/images/orange.jpg">
+		<img src="images/orange.jpg">
 
 		<button id="button2">Change Colour</button>
 
