--- a/StartPage.html
+++ b/StartPage.html
@@ -21,7 +21,7 @@
 	
 		<input type="text" placeholder="NICKNAME">
 		
-		<button id="button1" onclick="window.location.href='canvas.html';">Game Screen</button>
+		<button id="button1" onclick="window.location.href='canvas.html';">Play Game</button>
 
 		<img src="images/orange.jpg">
 
