--- a/canvas.html
+++ b/canvas.html
@@ -2,35 +2,18 @@
 
 
 
-<html lang="en">
+<html lang="en"> 
 
 <head>
     <link rel="stylesheet" type="text/css" href="canvas-styling.css">
-    <meta charset="UTF-8">
-    <title>Canvas</title>
+   
+    <meta charset="UTF-8"> 
+  
+    <title>Paintball Combat</title>
 </head>
 
-<body>
-    <canvas id="canvas">
-        Browser does not support the canvas tag.
-    </canvas>
+    <canvas /*id="canvas"*/></canvas>
 
-    <script src='canvas-script.js'></script>
-
-
-
-
-
-
-
-
-
-
-</body>
-
-
-
-
-
+    <script src="canvas-script.js"></script>
 
 </html>
