--- a/StartPage.html
+++ b/StartPage.html
@@ -14,7 +14,7 @@
 		<!--rolling text animation -->
 		<div class="word">
 			<span> Welcome to Paintball Combat</span>
-			<span> Use the Arrow Keys to move</span>
+			<span> Aim with your mouse or trackpad</span>
 			<span> Click to Shoot</span>
 			<span> </span>
 		</div>
