--- a/StartPage.html
+++ b/StartPage.html
@@ -14,6 +14,7 @@
 		<!--rolling text animation -->
 		<div class="word">
 			<span> Welcome to Paintball Combat</span>
+			<span> Use the arrow keys to move your character</span>
 			<span> Aim with your mouse or trackpad</span>
 			<span> Click to Shoot</span>
 			<span> </span>
