--- a/moveCircle.html
+++ b/moveCircle.html
@@ -10,8 +10,8 @@
             transition: 0.2s;
 }
       </style>
-   <head>
-   <body>
-      <div id="circle"></div>
-   </body>
+   </head>
+    <div id="myCircle"></div>
+    <script src="moveCircleFunction.js">
+   </script>
 </html>
