--- a/moveCircle.html
+++ b/moveCircle.html
@@ -11,7 +11,8 @@
 }
       </style>
    </head>
-    <div id="myCircle"></div>
-    <script src="moveCircleFunction.js">
-   </script>
+   <body>
+      <script src="moveCircleFunction.js"></script>
+      <div id="myCircle"></div>
+   </body>
 </html>
