--- a/StartPage.html
+++ b/StartPage.html
@@ -19,9 +19,9 @@
 			<span> Click to Shoot</span>
 			<span> </span>
 		</div>
-	
-		<input type="text" placeholder="NICKNAME">
-		
+		<form action="serverside.php" method="post">
+		<input name="username" type="text" placeholder="NICKNAME">
+	</form>
 		<button id="button1" onclick="window.location.href='canvas.html';">Play Game</button>
 
 		<img src="images/orange.jpg">
