--- a/map.html
+++ b/map.html
@@ -15,6 +15,12 @@
     <div class="walls" id="w3"></div>
     <div class="walls" id="w4"></div>
 
+    <div class="walls" id="i1"></div>
+    <div class="walls" id="i2"></div>
+    <div class="walls" id="i3"></div>
+    <div class="walls" id="i4"></div>
+    
+
 
 
 </body>
