Adding the instructions

--- a/Instructions.html
+++ b/Instructions.html
@@ -13,15 +13,15 @@
         </section>
         
         <div class = "Instruction1">
-            1. Some text explaining the instructions we still have to decide
+            1. Use your arrow keys or the WASD keys to control your character.
         </div>
 
         <div class = "Instruction2">
-            2. Some text explaining the instructions we still have to decide
+            2. Use your mouse or trackpad to aim your character.
         </div>
 
         <div class = "Instruction3">
-            3. Some text explaining the instructions we still have to decide
+            3. You can change the colour of your character on the start page.
         </div>
         
         <div class = "Instruction4">
@@ -29,7 +29,7 @@
         </div>
 
         <div class = "Instruction5">
-            5. Some text explaining the instructions we still have to decide
+            5. Left click on your mouse or trackpad to shoot your gun.
         </div>
 
         <div class="Back">
