--- a/Instructions.html
+++ b/Instructions.html
@@ -25,11 +25,11 @@
         </div>
         
         <div class = "Instruction4">
-            4. Some text explaining the instructions we still have to decide
+            4. Left click on your mouse or trackpad to shoot your gun.
         </div>
 
         <div class = "Instruction5">
-            5. Left click on your mouse or trackpad to shoot your gun.
+            5. And most importantly......have fun!
         </div>
 
         <div class="Back">
