--- a/StartPage.html
+++ b/StartPage.html
@@ -29,6 +29,8 @@
 		<button id="button2">Change Colour</button>
 
 		<button id="button3" onclick="window.location.href='Instructions.html';">Instructions</button>
+		
+		<button id="button4" onclick="window.location.href='Settings.html';">Settings</button>
 
 	</section>
 	<script type="text/javascript" src="StartPage.js"></script>
