--- a/StartPage.html
+++ b/StartPage.html
@@ -21,6 +21,7 @@
 		</div>
 		<form action="serverside.php" method="post">
 		<input name="username" type="text" placeholder="NICKNAME">
+		<input name="username" type="text" placeholder="PASSWORD">
 	</form>
 		<button id="button1" onclick="window.location.href='canvas.html';">Play Game</button>
 
@@ -29,7 +30,7 @@
 		<button id="button2">Change Colour</button>
 
 		<button id="button3" onclick="window.location.href='Instructions.html';">Instructions</button>
-		
+
 		<button id="button4" onclick="window.location.href='Settings.html';">Settings</button>
 
 	</section>
