--- a/StartPage.html
+++ b/StartPage.html
@@ -19,7 +19,8 @@
 			<span> Click to Shoot</span>
 			<span> </span>
 		</div>
-		<form action="serverside.php" method="post">
+		<form action="php/serverside.php" method="post">
+			<p><a id="new-user-link" href="newuser.html">New user? Click here.</a></p>
 		<input name="username" type="text" placeholder="NICKNAME">
 		<input name="username" type="text" placeholder="PASSWORD">
 	</form>
