--- a/StartPage.html
+++ b/StartPage.html
@@ -22,10 +22,10 @@
 		<form action="php/serverside.php" method="post">
 			<p><a id="new-user-link" href="newuser.html">New user? Click here.</a></p>
 		<input name="username" type="text" placeholder="NICKNAME">
-		<input name="username" type="text" placeholder="PASSWORD">
-	</form>
-		<button id="button1" onclick="window.location.href='canvas.html';">Play Game</button>
+		<input name="password" type="text" placeholder="PASSWORD">
 
+		<button name="submit" id="button1" onclick="window.location.href='canvas.html';">Play Game</button>
+	</form>
 		<img src="images/orange.jpg">
 
 		<button id="button2">Change Colour</button>
