--- a/canvas.html
+++ b/canvas.html
@@ -12,5 +12,5 @@
 
     <canvas /*id="canvas"*/></canvas>
 
-    <script src="canvas-script.js"></script>
+    <script src="canvasScript.js"></script>
 </html>
