Update and rename canvas.html to Canvas.html

--- a/Canvas.html
+++ b/Canvas.html
@@ -12,5 +12,5 @@
 
     <canvas /*id="canvas"*/></canvas>
 
-    <script src="canvasScript.js"></script>
+    <script src="CanvasScript.js"></script>
 </html>
