--- a/Canvas.html
+++ b/Canvas.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="canvas-styling.css">
+    <link rel="stylesheet" type="text/css" href="CanvasStyling.css">
 
     <meta charset="UTF-8">
 
