--- a/map.html
+++ b/map.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-  <script type='text/javascript' src='map-script.js'></script>
-  <link rel="stylesheet" type="text/css" href="map-styling.css">
+  <script type='text/javascript' src='MapScript.js'></script>
+  <link rel="stylesheet" type="text/css" href="MapStyling.css">
 
   <title>Map</title>
 </head>
