Update and rename moveCircle.html to MoveCircle.html

--- a/MoveCircle.html
+++ b/MoveCircle.html
@@ -12,7 +12,7 @@
       </style>
    </head>
    <body>
-      <script src="moveCircleFunction.js"></script>
+      <script src="MoveCircleFunction.js"></script>
       <div id="myCircle"></div>
    </body>
 </html>
