--- a/StartPage.html
+++ b/StartPage.html
@@ -10,12 +10,11 @@
 	<section id="body">
 		<div class="Heading">
 		<h1>Paintball Combat</h1>
-</div>
+		</div>
 		<!--rolling text animation -->
 		<div class="word">
 			<span> Welcome to Paintball Combat</span>
-			<span> Use the arrow keys to move your character</span>
-			<span> Aim with your mouse or trackpad</span>
+			<span> Use the Arrow Keys to move</span>
 			<span> Click to Shoot</span>
 			<span> </span>
 		</div>
@@ -29,8 +28,6 @@
 		<button id="button2">Change Colour</button>
 
 		<button id="button3" onclick="window.location.href='Instructions.html';">Instructions</button>
-		
-		<button id="button4" onclick="window.location.href='Settings.html';">Settings</button>
 
 	</section>
 	<script type="text/javascript" src="StartPage.js"></script>
