--- a/StartPage.html
+++ b/StartPage.html
@@ -23,7 +23,7 @@
 		<input name="username" type="text" placeholder="NICKNAME">
 		<input name="password" type="text" placeholder="PASSWORD">
 
-		<button name="submit" id="button1" onclick="window.location.href='canvas.html';">Play Game</button>
+		<button name="submit" id="button1" onclick="window.location.href='Canvas.html';">Play Game</button>
 	</form>
 		<img src="images/orange.jpg">
 
