--- a/StartPage.html
+++ b/StartPage.html
@@ -20,9 +20,11 @@
 		</div>
 		<form action="php/serverside.php" method="post">
 			<p><a id="new-user-link" href="newuser.html">New user? Click here.</a></p>
+		
+		<div class="stuff">
 		<input name="username" type="text" placeholder="NICKNAME">
 		<input name="password" type="text" placeholder="PASSWORD">
-
+		</div>
 		<button name="submit" id="button1" onclick="window.location.href='Canvas.html';">Play Game</button>
 	</form>
 		<img src="images/orange.jpg">
