--- a/StartPage.html
+++ b/StartPage.html
@@ -21,7 +21,7 @@
 		<form action="php/serverside.php" method="post">
 			<p><a id="new-user-link" href="newuser.html">New user? Click here.</a></p>
 		
-		<div class="stuff">
+		<div class="login">
 		<input name="username" type="text" placeholder="NICKNAME">
 		<input name="password" type="text" placeholder="PASSWORD">
 		</div>
