--- a/newuser.html
+++ b/newuser.html
@@ -18,7 +18,7 @@
   <body>
     <h1 style="text-align: center">New User</h1>
 
-    <form action="newuser.php" method="post" style="text-align: center">
+    <form action="php/newuser.php" method="post" style="text-align: center">
       <input name="new-username" type="text" placeholder="NICKNAME">
   		<input name="new-password" type="text" placeholder="PASSWORD">
       <br>
