--- a/StartPage.html
+++ b/StartPage.html
@@ -18,9 +18,9 @@
 			<span> Click to Shoot</span>
 			<span> </span>
 		</div>
-		<form action="php/serverside.php" method="post">
+		<form action="php/insert.php" method="post">
 			<p><a id="new-user-link" href="newuser.html">New user? Click here.</a></p>
-		
+
 		<div class="login">
 		<input name="username" type="text" placeholder="NICKNAME">
 		<input name="password" type="text" placeholder="PASSWORD">
@@ -32,7 +32,7 @@
 		<button id="button2">Change Colour</button>
 
 		<button id="button3" onclick="window.location.href='Instructions.html';">Instructions</button>
-		
+
 		<button id="button4" onclick="window.location.href='Settings.html';">Settings</button>
 
 
