masking password forms

--- a/StartPage.html
+++ b/StartPage.html
@@ -23,7 +23,7 @@
 
 		<div class="login">
 		<input name="username" type="text" placeholder="NICKNAME">
-		<input name="password" type="text" placeholder="PASSWORD">
+		<input name="password" type="password" placeholder="PASSWORD">
 		</div>
 		<button name="submit" id="button1" onclick="window.location.href='Canvas.html';">Play Game</button>
 	</form>
