--- a/newuser.html
+++ b/newuser.html
@@ -20,7 +20,7 @@
 
     <form action="php/newuser.php" method="post" style="text-align: center">
       <input name="new-username" type="text" placeholder="NICKNAME">
-  		<input name="new-password" type="text" placeholder="PASSWORD">
+  		<input name="new-password" type="password" placeholder="PASSWORD">
       <br>
       <input name="submit" type="submit" placeholder="SUBMIT">
 
