--- a/Settings.html
+++ b/Settings.html
@@ -1,4 +1,5 @@
-<!--this is the HTML for the Instructions page-->
+
+<!--this is the HTML for the Settings page-->
 <!DOCTYPE html>
 
 <html>
@@ -12,7 +13,8 @@
         </section>
         
         <div class = "Setting1">
-            1. Hello
+            1. Sound Effects
+            2. Music
         </div>
       
         <div class="Back">
