--- a/Instructions.html
+++ b/Instructions.html
@@ -35,6 +35,10 @@
         <div class="Back">
             <button id="BackButton" onclick="window.location.href='StartPage.html';">Back to Start Page</button>
         </div>
+            
+        <div class="Quit">
+            <button id="QuitButton" onclick="self.close()">Close</button>
+        </div>
         
 </body>
 </html>
