--- a/StartPage.html
+++ b/StartPage.html
@@ -34,6 +34,8 @@
 		<button id="button3" onclick="window.location.href='Instructions.html';">Instructions</button>
 
 		<button id="button4" onclick="window.location.href='Settings.html';">Settings</button>
+		
+		<button id="QuitButton" onclick="self.close()">Close</button>
 
 
 	</section>
