--- a/newuser.html
+++ b/newuser.html
@@ -19,8 +19,8 @@
     <h1 style="text-align: center">New User</h1>
 
     <form action="php/newuser.php" method="post" style="text-align: center">
-      <input name="new-username" type="text" placeholder="NICKNAME">
-  		<input name="new-password" type="password" placeholder="PASSWORD">
+      <input name="newUsername" type="text" placeholder="NICKNAME">
+  		<input name="newPassword" type="password" placeholder="PASSWORD">
       <br>
       <input name="submit" type="submit" placeholder="SUBMIT">
 
