--- a/Canvas.html
+++ b/Canvas.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
+<!-- English language -->
 <html lang="en">
 
 <head>
     <link rel="stylesheet" type="text/css" href="CanvasStyling.css">
 
     <meta charset="UTF-8">
-
+    <!-- gives the title a name -->
     <title>Paintball Combat</title>
 </head>
 
     <canvas /*id="canvas"*/></canvas>
-
+    <!-- links to the JavaScript file -->
     <script src="CanvasScript.js"></script>
 </html>
