--- a/newuser.html
+++ b/newuser.html
@@ -1,20 +1,10 @@
+<!-- page for creating a new user -->
 <!DOCTYPE html>
-
-
 <html>
-
-
-
-
   <head>
     <link rel = stylesheet type="text/css" href="StartPage.css">
     <title>New User</title>
-
-
-
   </head>
-
-
   <body>
     <h1 style="text-align: center">New User</h1>
 
@@ -23,19 +13,6 @@
   		<input name="newPassword" type="password" placeholder="PASSWORD">
       <br>
       <input name="submit" type="submit" placeholder="SUBMIT">
-
-
-
     </form>
-
-
-
-
-
-  </body>
-
-
-
-
-
+ </body>
 </html>
