editing start page so new user has its own button

--- a/StartPage.html
+++ b/StartPage.html
@@ -20,10 +20,11 @@
 			<span> Click to Shoot</span>
 			<span> </span>
 		</div>
+		<div class="newUser">
 		<!-- new user account -->
 		<form action="php/insert.php" method="post">
 			<p><a id="new-user-link" href="newuser.html">New user? Click here.</a></p>
-
+		</div>
 		<div class="login">
 		<!-- entering the username and password -->
 		<input name="username" type="text" placeholder="NICKNAME">
