--- a/Instructions.html
+++ b/Instructions.html
@@ -19,7 +19,7 @@
         </div>
         <!-- asigned each instructions its own div to make it easier to style -->
         <div class = "Instruction2">
-            2. Rotate your character to point at you enemies and then press space bar to shoot!
+            2. Rotate your character to point at your enemies and then press space bar to shoot!
         </div>
         <!-- asigned each instructions its own div to make it easier to style -->
         <div class = "Instruction3">
