--- a/StartPage.html
+++ b/StartPage.html
@@ -17,7 +17,7 @@
 		<div class="word">
 			<span> Welcome to Paintball Combat</span>
 			<span> Use the Arrow Keys to move</span>
-			<span> Click to Shoot</span>
+			<span> Click space bar to Shoot</span>
 			<span> </span>
 		</div>
 		<div class="newUser">
