--- a/StartPage.html
+++ b/StartPage.html
@@ -16,8 +16,9 @@
 		<!--rolling  text animation -->
 		<div class="word">
 			<span> Welcome to Paintball Combat</span>
-			<span> Use the Arrow Keys to move</span>
-			<span> Click to Shoot</span>
+			<span> Use the left and right arrow keys to turn</span>
+			<span> Use the up arrow key to move forwards</span>
+			<span> Hit the spacebar to shoot</span>
 			<span> </span>
 		</div>
 		<div class="newUser">
@@ -38,8 +39,6 @@
 		<button id="button2">Change Colour</button>
 		<!-- button that links to the instructions page -->
 		<button id="button3" onclick="window.location.href='Instructions.html';">Instructions</button>
-		<!-- button that links to the setting page -->
-		<button id="button4" onclick="window.location.href='Settings.html';">Settings</button>
 		
 		<button id="QuitButton" onclick="self.close()">Close</button>
 
