--- a/Instructions.html
+++ b/Instructions.html
@@ -15,7 +15,7 @@
         </section>
         <!-- asigned each instructions its own div to make it easier to style -->
         <div class = "Instruction1">
-            1. Use your arrow keys to control your character.
+            1. Use your arrow keys to control your character. Use space to shoot!
         </div>
         <!-- asigned each instructions its own div to make it easier to style -->
         <div class = "Instruction2">
