adding extra instruction

--- a/Instructions.html
+++ b/Instructions.html
@@ -15,23 +15,26 @@
         </section>
         <!-- asigned each instructions its own div to make it easier to style -->
         <div class = "Instruction1">
-            1. Use your arrow keys to control your character. Use space to shoot!
+            1. Use your arrow keys to control your character.
         </div>
-        <!-- asigned each instructions its own div to make it easier to style -->
         <div class = "Instruction2">
-            2. Rotate your character to point at your enemies and then press space bar to shoot!
+            2. Use space to shoot!
         </div>
         <!-- asigned each instructions its own div to make it easier to style -->
         <div class = "Instruction3">
-            3. You can change the colour of your character on the start page.
+            3. Rotate your character to point at your enemies and then press space bar to shoot!
         </div>
         <!-- asigned each instructions its own div to make it easier to style -->
         <div class = "Instruction4">
-            4. You can run into your own bullets so be careful!
+            4. You can change the colour of your character on the start page.
         </div>
         <!-- asigned each instructions its own div to make it easier to style -->
         <div class = "Instruction5">
-            5. And most importantly......have fun!
+            5. You can run into your own bullets so be careful!
+        </div>
+        <!-- asigned each instructions its own div to make it easier to style -->
+        <div class = "Instruction6">
+            6. And most importantly......have fun!
         </div>
         <!-- button to go back to the start page -->
         <div class="Back">
